// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 2,
        "width": "100%",
      },
    ]
  }
  testID="textField"
>
  <Text
    disabled={false}
    state="filled"
    style={
      Array [
        Object {
          "color": "#FAFAEA",
          "fontSize": 14,
          "marginBottom": 5,
        },
      ]
    }
  >
    <Text>
      Label
    </Text>
  </Text>
  <View
    disabled={false}
    numberOfLines={1}
    size="regular"
    state="filled"
    style={
      Array [
        Object {
          "borderColor": "#FAF3E3",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 1,
          "height": 56,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
      ]
    }
    testID="textField-inputWrapper"
  >
    <TextInput
      allowFontScaling={true}
      disabled={false}
      editable={true}
      label="Label"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholder="Placeholder"
      placeholderTextColor="#FAFAEA"
      rejectResponderTermination={true}
      secureTextEntry={false}
      size="regular"
      style={
        Array [
          Object {
            "color": "#FAF3E3",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 16,
            "height": 56,
            "marginRight": 0,
            "textAlignVertical": "center",
          },
        ]
      }
      testID="textField-input"
      type="text"
      underlineColorAndroid="transparent"
      value="test"
    />
  </View>
</View>
`;

exports[`TextField component should render textField disabled 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 2,
        "width": "100%",
      },
    ]
  }
  testID="textField"
>
  <Text
    disabled={true}
    state="filled"
    style={
      Array [
        Object {
          "color": "#FEEEEF",
          "fontSize": 14,
          "marginBottom": 5,
        },
      ]
    }
  >
    <Text>
      Label
    </Text>
  </Text>
  <View
    disabled={true}
    numberOfLines={1}
    size="regular"
    state="filled"
    style={
      Array [
        Object {
          "borderColor": "#FEEEEF",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 1,
          "height": 56,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
      ]
    }
    testID="textField-inputWrapper"
  >
    <TextInput
      allowFontScaling={true}
      disabled={true}
      editable={false}
      label="Label"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholder="Placeholder"
      placeholderTextColor="#FEEEEF"
      rejectResponderTermination={true}
      secureTextEntry={false}
      size="regular"
      style={
        Array [
          Object {
            "color": "#FAF3E3",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 16,
            "height": 56,
            "marginRight": 0,
            "textAlignVertical": "center",
          },
        ]
      }
      testID="textField-input"
      type="text"
      underlineColorAndroid="transparent"
      value="test"
    />
  </View>
</View>
`;
